fix: Removed tech section image and fixed align

--- a/src/pages/technologiesPage.scss
+++ b/src/pages/technologiesPage.scss
@@ -16,7 +16,9 @@
 
   &__text-container {
     display: flex;
-    flex-direction: column;
+
+    flex: 0 0 100%;
+    justify-content: space-around;
 
     @media only screen and (max-width: $bp-tablet-port) {
       flex-direction: row;
